2009-07-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Eliminated duplicated filterBitfield initialization code.
	* src/BitfieldMan.cc
	* src/BitfieldMan.h

2009-07-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added assert(!req.isNull()) when DlRetryEx is caught(this is
	relatively naive approach, though).  For DownloadFailureException,
	we handle the case when req is null properly.
	* src/AbstractCommand.cc

2009-07-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added function returning suffix of control file to
	DefaultBtProgressInfoFile.
	* src/DefaultBtProgressInfoFile.cc
	* src/DefaultBtProgressInfoFile.h
	* src/RequestGroup.cc

2009-07-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented getVersion in man page.
	* doc/aria2c.1.txt

2009-07-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented type of offset and num for tellWaiting xml-rpc method.
	* doc/aria2c.1.txt

2009-07-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Implemented getVersion xml-rpc method. This method returns struct
	which has 2 key-value pairs: "version" key is associated to the
	version of aria2, such as "1.5.0". "enabledFeatures" key is
	associated to the list of enabled features, such as "Async DNS",
	"BitTorrent".
	* src/FeatureConfig.h
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* test/XmlRpcMethodTest.cc

2009-07-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed TLS1.1 protocol support when aria2 is built with gnutls
	for compatibility issue.
	* src/SocketCore.cc

2009-07-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error with openSSL
	* src/bittorrent_helper.cc
	* src/messageDigest.h

2009-07-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed bad code: setting certificate type priority to key
	exchange priority.
	* src/SocketCore.cc
