@@ -1,3 +1,9 @@
+2009-07-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	Added assertion fileEntries.size() == 1 if BitTorrent is not
+	involved.
+	* src/RequestGroup.cc
+
 2009-07-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	Eliminated duplicated filterBitfield initialization code.
